# Left4Dead

./:  documentation.md  .gitignore  Area.h  CMakeLists.txt  README.md  SdlWindow.cpp  SdlWindow.h  client_main.cpp  correcciones-grupo-4.md  correcciones.md  directory_structure.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  reformat_test_output.py  render_main.cc  server_main.cpp  server_test_output.txt
client/: client.cpp  client.h  client_documentation.md  client_event_manager.cc  client_event_manager.h  client_game_state.h  client_main.cpp  client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_receiver.h  client_render.cpp  client_render.h  client_sender.cpp  client_sender.h  client_texture.cpp  client_texture.h  client_texture_manager.cpp  client_texture_manager.h  correcciones.md
client/actions/: action_client.h  action_create.cpp  action_create.h  action_end_move.cpp  action_end_move.h  action_end_shoot.cpp  action_end_shoot.h  action_exit_game.cpp  action_exit_game.h  action_join.cpp  action_join.h  action_recharge.cpp  action_recharge.h  action_render.cpp  action_render.h  action_revive.cpp  action_revive.h  action_start_game.cpp  action_start_game.h  action_start_move.cpp  action_start_move.h  action_start_shoot.cpp  action_start_shoot.h
client/client_action/: action.h  create.cpp  create.h  move.cpp  move.h
client/client_connection/: client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h
client/configuration/: configuration.yaml  renderer_config.cpp  renderer_config.h  rutas.txt
client/menuQT/: create.cpp  create.h  create.ui  hiloMensajes.cpp  hiloMensajes.h  join.cpp  join.h  join.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
client/render/: client_game_state.h  client_render.cpp  client_render.h  client_texture.cpp  client_texture.h  client_texture_manager.cpp
client/render/game/: client_game.cpp  client_game.h  client_game_state.h  client_infected.cpp  client_infected.h  client_lifeBar.cpp  client_lifeBar.h  client_player.cpp  client_player.h
client/render/sound/: client_sound.cpp  client_sound.h  client_sound_manager.cpp  client_sound_manager.h
client/render/texture/: client_texture.cpp  client_texture.h  client_texture_manager.cpp  client_texture_manager.h
dipa_classes/: action_client.h  action_create.cpp  action_create.h  action_end_move.cpp  action_end_move.h  action_end_shoot.cpp  action_end_shoot.h  action_join.cpp  action_join.h  action_start_game.cpp  action_start_game.h  action_start_move.cpp  action_start_move.h  action_start_shoot.cpp  common_liberror.cpp  common_socket.cpp  liberror.h  queue.h  resolver.cpp  resolver.h  socket.cpp  socket.h  thread.h
server/: server_config.cpp  server_main.cpp
server/client_connection/: client_connection.cpp  client_connection.h  client_sender.cpp
server_root/: server_documentation.md
server_root/client_connection/: client_connection.cpp  client_connection.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h  server_protocol.cpp  server_protocol.h
server_root/entities/: attack.cpp  attack.h  collision_detector.cpp  collision_detector.h  entity.cpp  entity.h  infected.cpp  obstacle.cpp  obstacle.h  player.cpp  player.h  shot.cpp  shot.h  venom.cpp  weapon.cpp  weapon.h  witch.cpp  zombie.cpp  zombie.h  zombie_spawner.cpp  zombie_spawner.h
server_root/entities/zombies/: infected.cpp  infected.h  jumper.cpp  jumper.h  spear.cpp  spear.h  venom.cpp  venom.h  witch.cpp  witch.h  zombie.cpp  zombie.h  zombie_spawner.cpp  zombie_spawner.h
server_root/game/: action.cpp  action.h  game.cpp  game.h  gameManager.cpp  gameManager.h  game_state.cpp  game_state.h  game_thread.cpp  game_thread.h  games_manager.cpp  games_manager.h  move.cpp  move.h  player.cpp  player.h  score_saver.cpp  score_saver.h  scores.yaml  server_message.cpp  server_message.h
server_root/game/configuration/: configuration.yaml  game_config.cpp  game_config.h
server_root/server/: acceptor.cpp  acceptor.h  collision_detector.cpp  collision_detector.h  entity.cpp  entity.h  game_thread.h  server.cpp  server.h  server_main.cpp  server_receiver.cpp  server_receiver.h  server_requester.cpp  server_requester.h  shot.cpp  shot.h  zombie.h
server_root/server/configuration/: configuration.yaml  server_config.cpp
server_root/server/entities/: entity.cpp  zombie.cpp
server_root/server_diagrams/: client_connection_uml.puml  dto_usage_uml.puml  game_loop.puml  game_loop_sequence.puml  input_to_game_sequence.puml  server_uml.puml  singleton_usage_uml.puml  state_usage_player_example.puml
server_root/tests/: collisions_tests.cpp  entity_tests.cpp
server_root_viejo/client_connection/: client_connection.cpp  client_connection.h  server_receiver.cpp  server_receiver.h  server_sender.cpp  server_sender.h
server_root_viejo/entities/: collision_detector.cpp  collision_detector.h  entity.cpp  entity.h  player.cpp  player.h  shot.cpp  shot.h  zombie.cpp  zombie.h
server_root_viejo/game/: game.cpp  game.h  game_thread.cpp  game_thread.h  games_manager.cpp  games_manager.h
server_root_viejo/server/: acceptor.cpp  acceptor.h  server.cpp  server.h  server_main.cpp  server_protocol.cpp  server_protocol.h
tests/: CMakeLists.txt
tests/client_tests/: client_protocol_tests.cpp  main_client_test.cpp
tests/server_tests/: collisions_tests.cpp  entity_tests.cpp  game_config_tests.cpp  game_tests.cpp  game_thread_tests.cpp  games_manager_tests.cpp  main_tests.cpp  server_protocol_tests.cpp  zombie_spawner_tests.cpp
valgrind_logs/: server_double_start_command.txt  server_normal_run.txt
